...
        setupNavigationBar()
        scrollBehavior()
    }
    
    private func setupNavigationBar() {
        let settingsButton = UIBarButtonItem(image: R.image.iconNavbarSettings(), style: .done, target: self, action: #selector(showSettings))
        settingsButton.accessibilityIdentifier = "openSettings"

        let languagesButton = UIBarButtonItem(image: R.image.iconNavbarLanguage(), style: .done, target: self, action: #selector(showLanguages(sender:)))
        languagesButton.accessibilityIdentifier = "openLanguage"

        navigationItem.leftBarButtonItem = settingsButton
        navigationItem.rightBarButtonItem = languagesButton
        
        setNavigationBarOpacity(alpha: 0)
        self.navigationController?.navigationBar.hideBottomHairline()
...
