...
            backgroundColor = .white
            icon = R.image.loginIconGoogle()
            accessibilityIdentifier = "signInWithGoogle"
            addShadow()
        case .anonymous:
            attributes = AppStyle.Login.Text.signInButtonAnonymous(string: "Continue without login".localized())
            accessibilityIdentifier = "continueWithoutLogin"
        }
        if let image = icon {
            setImage(image, for: .normal)
        }

        setAttributedTitle(attributes, for: .normal)
...
