...
        
        self.view.clipsToBounds = true
        self.view.backgroundColor = theme.backgroundColor
        self.bibleView.webView.isOpaque = false
        
        let closeButton = UIBarButtonItem(image: R.image.iconNavbarClose(), style: .done, target: self, action: #selector(closeAction(sender:)))
        closeButton.accessibilityIdentifier = "dismissBibleVerse"
        navigationItem.leftBarButtonItem = closeButton

        let versionName = presenter?.interactor?.preferredBibleVersionFor(bibleVerses: (self.read?.bible)!) ?? ""

        versionButton = UIButton(type: .custom)
        versionButton.setAttributedTitle(AppStyle.Base.Text.navBarButton(string: versionName, color: theme.navBarTextColor), for: .normal)
...
